# thudbot

./: .dockerignore  .env.example  .gitignore  00_Thud_construction.ipynb  01_Thud_construction.ipynb  BACKLOG.md  BUGS.md  COPYRIGHT  Dockerfile  HARDENING.md  Makefile  README.md  check_and_commit.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_error_handling_regression.py  test_langgraph_manual.py
.cursor/rules/: thudbot-rules.mdc
.github/workflows/: ci.yml  docker-build.yml
apps/backend/: .dockerignore  Dockerfile  README.MD  README.md  entrypoint.sh  pyproject.toml  run_checks.sh
apps/backend/data/: Thudbot_Hint_Data_1.csv  Thudbot_Hint_Data_1_OLD.csv  question_rewrite_comparison.md
apps/backend/qdrant_db_backup_20251217_105106/: meta.json
apps/backend/qdrant_db_backup_20251217_105106/collection/Thudbot_Hints/: storage.sqlite
apps/backend/src/: api.py  format_output_node.py  generate_error_message_node.py  langgraph_flow.py  rate_limiter.py
apps/backend/tests/: README.md  conftest.py  test_functions.py  test_progressive_hints_prep.py  test_qdrant_build.py  test_router_only.py  test_text_chunking.py
apps/backend/tests/regression/: run_quick_regression.py  run_regression.py  test_questionsA.csv
apps/backend/tests/security/: check_langsmith_traces.py  run_security_tests.py  test_error_injection.py  test_security.py
apps/backend/tests/utils/: paths.py
apps/backend/thudbot_core/: __init__.py  __main__.py  agent.py  api.py  app.py  config.py  find_hint_node.py  format_output_node.py  generate_error_message_node.py  langgraph_flow.py  maintain_character_node.py  rate_limiter.py  router_node.py  state.py  verify_correctness_node.py
apps/frontend/: Dockerfile  next.config.js  package-lock.json  package.json
apps/frontend/app/api/version/: route.ts
apps/retrieval/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
apps/retrieval/retrieval_service/: __init__.py  api.py  config.py  retriever.py
apps/retrieval/tests/: __init__.py  conftest.py  test_retrieval_api_smoke.py
data/: golden_dataset_readable.csv  golden_dataset_report.md  goldendataset.json  platinum_dataset.json
docs/: ARCHITECTURE.md  CERTIFICATION.md  DESIGN.md  DESIGN.md.md  DEVELOPMENT_JOURNAL.md  LangGraph_diagram_20250820  MERGE.md  TEST_PLAN.md  Thudbot 2 - timeline.md  Thudbot 2 project spec.md  Thudbot Design v3 draft.md  Thudbot langgraph diagrams for mermaid.md
docs/Manifests/: Thudbot_NarrativeHints_20260106.md
docs/dev_journey/: CHECKPOINT_20250802_2350.md  CHECKPOINT_20250803_1300.md  CHECKPOINT_20250803_2330.md  CHECKPOINT_20250804_1145.md  CHECKPOINT_20250804_2000.md  Certification_Checklist.md  Checkpoint_20250801_2300.md  DEVLOG.md  LLM_Partner_Profile.md
infra/: compose.prod-local.yml  compose.prod-secrets.yml  compose.prod.app.yml  compose.prod.retrieval.yml  compose.prod.yml  compose.yml  deploy-app.sh  extract_last_run.sh
notebooks/: 01_Thud_construction.ipynb
rag_utils/: README.md  build_utils.py  embedding_utils.py  loader.py
reference_notebooks/: 09_Advanced_Retrieval_with_LangChain_Assignment_cleanupFri.ipynb
reference_notebooks/06_MultiAgentLangGraph/: Multi_Agent_RAG_LangGraph.ipynb
reference_notebooks/HW16_cache/: Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
reference_notebooks/HW16_cache/langgraph_agent_lib/: __init__.py  guarded_agent.py  guardrails.py  models.py
reference_notebooks/HW16_cache/langgraph_agent_lib/rail_specs/: student_aid.rail
src/: __init__.py  agent.py  api.py  app.py  config.py  find_hint_node.py  format_output_node.py  generate_error_message_node.py  langgraph_flow.py  maintain_character_node.py  respond_to_user_node.py  router_node.py  state.py  test_cache_performance.py  test_comprehensive.py  test_dataset_validation.py  test_error_injection.py  test_focused.py  test_langgraph.py  test_queries.py  test_rag_focused.py  test_report_analyzer.py  verify_correctness_node.py
src/app/: layout.tsx  page.tsx
src/test/: run_all_tests.py
tests/: run_all_tests.py  test_functions.py  test_progressive_hints_prep.py  test_router_only.py
tests/regression/: demo_test.csv  run_quick_regression.py  run_regression.py  test_questions.csv  test_quick.csv
tests/security/: run_security_tests.py  test_error_injection.py  test_security.py
tools/: build_qdrant_collection.py  view_chunks.py
tools/tef/: README.md  __init__.py  config.py  evaluator.py  metrics.py  run_eval.py
tools/tef/benchmark/: .gitignore  benchmark_tef.csv
