# project.toml
[project]
name = "project-title"
version = "0.1.0"
description = "A brief description of your project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

# This is where you declare your project's dependencies.
# Example:
# "streamlit" = "^1.28.0"
# "langchain" = ">=0.0.300"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-community>=0.3.16", # Core framework for building agentic and RAG applications
    "langchain-openai>=0.3.3",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.69",
    "numpy>=2.2.2",
    "unstructured>=0.14.8",
    "nltk==3.8.1",
    "pymupdf>=1.26.3",
    "streamlit>=1.28.0", # UI Framework for the chatbot interface
    "qdrant-client>=1.6.0",
    "pydantic>=2.5.0", # For parsing documents and data
    "pandas>=2.1.0",
    "pytest>=7.4.0", # Testing and evaluation dependencies
    "ragas==0.2.10"
]